--- a/ansible/roles/nextcloud/templates/.env.j2
+++ b/ansible/roles/nextcloud/templates/.env.j2
@@ -4,6 +4,7 @@ POSTGRES_DB={{ postgres_databases.nextcloud.user }}
 POSTGRES_USER={{ postgres_databases.nextcloud.user }}
 POSTGRES_PASSWORD={{ postgres_databases.nextcloud.password }}
 REDIS_HOST=redis
+REDIS_HOST_PASSWORD={{ redis_password }}
 
 # Nextcloud Admin
 NEXTCLOUD_ADMIN_USER={{ nextcloud_admin_user }}
