--- a/ansible/roles/immich/templates/.env.j2
+++ b/ansible/roles/immich/templates/.env.j2
@@ -4,6 +4,7 @@ DB_USERNAME={{ postgres_databases.immich.user }}
 DB_PASSWORD={{ postgres_databases.immich.password }}
 DB_DATABASE_NAME={{ postgres_databases.immich.user }}
 REDIS_HOSTNAME=redis
+REDIS_PASSWORD={{ redis_password }}
 
 # Paths & Network
 DATA_PATH={{ data_path }}
