--- a/ansible/roles/monitoring/templates/grafana-dashboards.yml.j2
+++ b/ansible/roles/monitoring/templates/grafana-dashboards.yml.j2
@@ -14,4 +14,4 @@ providers:
     allowUiUpdates: true
     options:
       path: /etc/grafana/provisioning/dashboards
-      foldersFromFilesStructure: true
+      foldersFromFilesStructure: false
