--- a/ansible/roles/monitoring/templates/grafana-datasource.yml.j2
+++ b/ansible/roles/monitoring/templates/grafana-datasource.yml.j2
@@ -17,3 +17,13 @@ datasources:
       timeInterval: '15s'
       httpMethod: 'POST'
     version: 1
+
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    uid: loki
+    editable: true
+    jsonData:
+      maxLines: 1000
+    version: 1
