--- a/ansible/roles/monitoring/templates/promtail-config.yml.j2
+++ b/ansible/roles/monitoring/templates/promtail-config.yml.j2
@@ -11,7 +11,7 @@ clients:
 scrape_configs:
   - job_name: docker_logs
     docker_sd_configs:
-      - host: unix:///var/run/docker.sock
+      - host: http://docker-socket-proxy:2375
         refresh_interval: 5s
         filters:
           - name: label
