--- a/ansible/roles/proxy/templates/traefik.yml.j2
+++ b/ansible/roles/proxy/templates/traefik.yml.j2
@@ -66,9 +66,9 @@ entryPoints:
 # Providers
 # ========================================
 providers:
-  # Docker auto-discovery
+  # Docker auto-discovery via proxy socket
   docker:
-    endpoint: "unix:///var/run/docker.sock"
+    endpoint: "http://docker-socket-proxy:2375"
     exposedByDefault: false
     network: traefik-proxy
     watch: true
