--- a/ansible/roles/immich/templates/.env.j2
+++ b/ansible/roles/immich/templates/.env.j2
@@ -6,6 +6,7 @@ DB_DATABASE_NAME={{ postgres_databases.immich.user }}
 
 # Redis Connection (using shared Redis instance)
 REDIS_HOSTNAME=redis
+REDIS_PORT=6379
 REDIS_PASSWORD={{ redis_password }}
 
 # Paths & Network
