--- a/ansible/roles/monitoring/templates/env.j2
+++ b/ansible/roles/monitoring/templates/env.j2
@@ -19,9 +19,13 @@ GRAFANA_CERT_RESOLVER={{ 'letsencrypt' if enable_letsencrypt else '' }}
 GRAFANA_MIDDLEWARES={{ grafana_middlewares | default('') }}
 
 # Database credentials for exporters
-POSTGRES_USER={{ postgres_user | default('postgres') }}
-POSTGRES_PASSWORD={{ postgres_root_password }}
-POSTGRES_DB={{ postgres_db | default('postgres') }}
+NEXTCLOUD_DB_USER={{ postgres_databases.nextcloud.user }}
+NEXTCLOUD_DB_PASSWORD={{ postgres_databases.nextcloud.password }}
+NEXTCLOUD_DB_NAME={{ postgres_databases.nextcloud.user }}
+
+IMMICH_DB_USER={{ postgres_databases.immich.user }}
+IMMICH_DB_PASSWORD={{ postgres_databases.immich.password }}
+IMMICH_DB_NAME={{ postgres_databases.immich.user }}
 
 # Redis credentials
 REDIS_PASSWORD={{ redis_password }}
