--- a/ansible/roles/nextcloud/templates/.env.j2
+++ b/ansible/roles/nextcloud/templates/.env.j2
@@ -1,8 +1,8 @@
 # Database Connection
 POSTGRES_HOST=nextcloud-db
 POSTGRES_DB={{ nextcloud_db_database }}
-POSTGRES_USER={{ postgres_databases.nextcloud.user }}
-POSTGRES_PASSWORD={{ postgres_databases.nextcloud.password }}
+POSTGRES_USER={{ nextcloud_db_user }}
+POSTGRES_PASSWORD={{ nextcloud_db_password }}
 
 # Redis
 REDIS_HOST=redis
