--- a/ansible/roles/monitoring/templates/env.j2
+++ b/ansible/roles/monitoring/templates/env.j2
@@ -19,13 +19,13 @@ GRAFANA_CERT_RESOLVER={{ 'letsencrypt' if enable_letsencrypt else '' }}
 GRAFANA_MIDDLEWARES={{ grafana_middlewares | default('') }}
 
 # Database credentials for exporters
-NEXTCLOUD_DB_USER={{ postgres_databases.nextcloud.user }}
-NEXTCLOUD_DB_PASSWORD={{ postgres_databases.nextcloud.password }}
-NEXTCLOUD_DB_NAME={{ postgres_databases.nextcloud.user }}
+NEXTCLOUD_DB_USER={{ nextcloud_db_user }}
+NEXTCLOUD_DB_PASSWORD={{ nextcloud_db_password }}
+NEXTCLOUD_DB_NAME={{ nextcloud_db_database }}
 
-IMMICH_DB_USER={{ postgres_databases.immich.user }}
-IMMICH_DB_PASSWORD={{ postgres_databases.immich.password }}
-IMMICH_DB_NAME={{ postgres_databases.immich.user }}
+IMMICH_DB_USER={{ immich_db_username }}
+IMMICH_DB_PASSWORD={{ immich_db_password }}
+IMMICH_DB_NAME={{ immich_db_database }}
 
 # Redis credentials
 REDIS_PASSWORD={{ redis_password }}
