--- a/ansible/roles/jellyfin/templates/jellyfin.env.j2
+++ b/ansible/roles/jellyfin/templates/jellyfin.env.j2
@@ -1,4 +1,5 @@
 # Paths & Network
+TZ={{ timezone }}
 DATA_PATH={{ data_path }}
 PROXY_NETWORK={{ proxy_network_name }}
 JELLYFIN_DOMAIN={{ service_domains.jellyfin }}
