--- a/ansible/roles/monitoring/templates/monitoring.env.j2
+++ b/ansible/roles/monitoring/templates/monitoring.env.j2
@@ -3,6 +3,9 @@
 # Générée par Ansible pour {{ deploy_environment }}
 # ========================================
 
+# Timezone
+TZ={{ timezone }}
+
 # Prometheus
 PROMETHEUS_RETENTION={{ monitoring_prometheus_retention | default('15d') }}
 
