--- a/ansible/roles/nextcloud/templates/nextcloud.env.j2
+++ b/ansible/roles/nextcloud/templates/nextcloud.env.j2
@@ -15,5 +15,6 @@ NEXTCLOUD_TRUSTED_DOMAINS={{ service_domains.nextcloud }}
 NEXTCLOUD_DATA_DIR=/var/www/html/data
 
 # Paths & Network
+TZ={{ timezone }}
 DATA_PATH={{ data_path }}
 PROXY_NETWORK={{ proxy_network_name }}
