--- a/ansible/roles/immich/templates/immich.env.j2
+++ b/ansible/roles/immich/templates/immich.env.j2
@@ -9,6 +9,7 @@ REDIS_HOSTNAME=redis
 REDIS_PASSWORD={{ redis_password }}
 
 # Paths & Network
+TZ={{ timezone }}
 DATA_PATH={{ data_path }}
 PROXY_NETWORK={{ proxy_network_name }}
 IMMICH_DOMAIN={{ service_domains.immich }}
