--- a/ansible/roles/jellyfin/templates/jellyfin.env.j2
+++ b/ansible/roles/jellyfin/templates/jellyfin.env.j2
@@ -1,5 +1,11 @@
+# Permissions
+PUID={{ system_user }}
+PGID={{ system_group }}
+
 # Paths & Network
 TZ={{ timezone }}
-DATA_PATH={{ data_path }}
+CONFIG_PATH={{ storage.ansible.compose }}/jellyfin/config
+CACHE_PATH={{ storage.ansible.compose }}/jellyfin/cache
+MEDIA_PATH={{ storage.media.jellyfin_movies | dirname }} # /mnt/nas/media
 PROXY_NETWORK={{ proxy_network_name }}
 JELLYFIN_DOMAIN={{ service_domains.jellyfin }}
