--- a/ansible/roles/monitoring/templates/monitoring.env.j2
+++ b/ansible/roles/monitoring/templates/monitoring.env.j2
@@ -25,5 +25,8 @@ GRAFANA_MIDDLEWARES={{ monitoring_grafana_middlewares | default('') }}
 PROXY_NETWORK={{ proxy_network_name }}
 MONITORING_NETWORK={{ monitoring_network_name }}
 
+# Storage Bind Mounts
+MONITORING_PATH={{ storage.monitoring }}
+
 # Redis credentials
 REDIS_PASSWORD={{ redis_password }}
