--- a/ansible/roles/nextcloud/templates/nextcloud.env.j2
+++ b/ansible/roles/nextcloud/templates/nextcloud.env.j2
@@ -14,7 +14,13 @@ NEXTCLOUD_ADMIN_PASSWORD={{ nextcloud_admin_password }}
 NEXTCLOUD_TRUSTED_DOMAINS={{ service_domains.nextcloud }}
 NEXTCLOUD_DATA_DIR=/var/www/html/data
 
+# Permissions
+PUID={{ system_user }}
+PGID={{ system_group }}
+
 # Paths & Network
 TZ={{ timezone }}
-DATA_PATH={{ data_path }}
+DB_PATH={{ storage.databases.nextcloud }}
+HTML_PATH={{ storage.ansible.compose }}/nextcloud/html
+DATA_PATH={{ storage.media.nextcloud_data }}
 PROXY_NETWORK={{ proxy_network_name }}
