--- a/ansible/roles/jellyfin/templates/jellyfin.env.j2
+++ b/ansible/roles/jellyfin/templates/jellyfin.env.j2
@@ -6,6 +6,6 @@ PGID={{ system_group }}
 TZ={{ timezone }}
 CONFIG_PATH={{ storage.ansible.compose }}/jellyfin/config
 CACHE_PATH={{ storage.ansible.compose }}/jellyfin/cache
-MEDIA_PATH={{ storage.media.jellyfin_movies | dirname }} # /mnt/nas/media
+MEDIA_PATH={{ storage.media.jellyfin_media | dirname }} # /mnt/nas/media
 PROXY_NETWORK={{ proxy_network_name }}
 JELLYFIN_DOMAIN={{ service_domains.jellyfin }}
