--- a/ansible/roles/monitoring/templates/monitoring.env.j2
+++ b/ansible/roles/monitoring/templates/monitoring.env.j2
@@ -15,6 +15,13 @@ GRAFANA_ADMIN_PASSWORD={{ monitoring_grafana_admin_password }}
 GRAFANA_DOMAIN={{ service_domains.grafana }}
 GRAFANA_ROOT_URL={{ 'https' if proxy_enable_letsencrypt else 'http' }}://{{ service_domains.grafana }}
 GRAFANA_PLUGINS={{ monitoring_grafana_plugins | default('') }}
+GF_SECURITY_ADMIN_USER={{ monitoring_grafana_admin_user | default('admin') }}
+GF_SECURITY_ADMIN_PASSWORD={{ monitoring_grafana_admin_password }}
+GF_SERVER_ROOT_URL={{ 'https' if proxy_enable_letsencrypt else 'http' }}://{{ service_domains.grafana }}
+GF_INSTALL_PLUGINS={{ monitoring_grafana_plugins | default('') }}
+GF_USERS_ALLOW_SIGN_UP=false
+GF_AUTH_ANONYMOUS_ENABLED=false
+GF_SECURITY_DISABLE_GRAVATAR=true
 
 # Traefik integration
 GRAFANA_TLS_ENABLED={{ 'true' if proxy_enable_letsencrypt else 'false' }}
