--- a/ansible/roles/proxy/templates/traefik.yml.j2
+++ b/ansible/roles/proxy/templates/traefik.yml.j2
@@ -70,7 +70,7 @@ providers:
   docker:
     endpoint: "http://docker-socket-proxy:2375"
     exposedByDefault: false
-    network: traefik-proxy
+    network: {{ proxy_network_name }}
     watch: true
 
   # File-based config (middlewares, etc.)
