--- a/ansible/roles/nextcloud/templates/nextcloud.env.j2
+++ b/ansible/roles/nextcloud/templates/nextcloud.env.j2
@@ -13,6 +13,8 @@ NEXTCLOUD_ADMIN_USER={{ nextcloud_admin_user }}
 NEXTCLOUD_ADMIN_PASSWORD={{ nextcloud_admin_password }}
 NEXTCLOUD_TRUSTED_DOMAINS={{ service_domains.nextcloud }}
 NEXTCLOUD_DATA_DIR=/var/www/html/data
+OVERWRITECLIURL=https://{{ service_domains.nextcloud }}
+OVERWRITEPROTOCOL=https
 
 # Permissions
 PUID={{ system_user }}
